# backend/docs/swagger.json
@@ -282,6 +282,66 @@
                 }
             }
         },
+        "/api/v1/aps/buckets/{bucketKey}/objects/{objectKey}/signeds3upload": {
+            "post": {
+                "description": "S3へアップロードしたオブジェクトの作成を完了します",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "APS Object"
+                ],
+                "summary": "APSオブジェクトの作成完了",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "バケットキー",
+                        "name": "bucketKey",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "オブジェクトキー",
+                        "name": "objectKey",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "アップロードキー",
+                        "name": "uploadKey",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.APSObject"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/aps_object.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/aps_object.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/aps/objects/signeds3upload": {
             "put": {
                 "description": "S3署名付きURLを使用してオブジェクトをS3へアップロードします",
@@ -431,6 +491,24 @@
         "domain.APSObject": {
             "type": "object",
             "properties": {
+                "bucketKey": {
+                    "type": "string"
+                },
+                "contentType": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "objectId": {
+                    "type": "string"
+                },
+                "objectKey": {
+                    "type": "string"
+                },
+                "size": {
+                    "type": "integer"
+                },
                 "uploadExpiration": {
                     "type": "string"
                 },
